# rxn-rdf-converter

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-test.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  intro.rst  quickstart.rst
src/: cli.py  rxn_rdf_converter.py
test/: test_rxn_rdf_converter.py
